fix alignment of text, increased padding between sections

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -36,13 +36,19 @@ footer
   margin-bottom: 1.5rem
 
 section
-  padding-top: 2rem
+  padding-top: 0.5rem
+  padding-bottom: 0.5rem
+  margin-top: 1.5rem
+  margin-bottom: 1.5rem
+
   @include span-columns(9)
   @include shift(1.5)
   .block
     @include span-columns(3)
     h4
       text-align: center
+  &:nth-child(odd)
+    background-color: rgba(255,255,255,0.5)
 
 .menu
   text-align: center
@@ -58,7 +64,8 @@ section
     @include span-columns(12)
 
   & > a
-    margin-right: 2rem
+    margin-left: 1rem
+    margin-right: 1rem
 
 a
   text-decoration: none
